--- a/public/views/createProfile.html
+++ b/public/views/createProfile.html
@@ -1,7 +1,7 @@
 <div ng-controller="ProfileController as vm">
 
 
-<form ng-submit="vm.editProfile()" layout style="padding: 90px">
+<form ng-submit="vm.postProfile()" layout style="padding: 90px">
     <div>
      <md-input-container >
         <label> Upload a Photo</label>
@@ -45,23 +45,23 @@
         </md-input-container>
        <md-input-container >
         <label> Where You've Been  </label>
-        <input required ng-model="vm.user.userBeen"></input>
+        <input  ng-model="vm.user.userBeen"></input>
       </md-input-container>       
       <md-input-container >
         <label> Where You're At  </label>
-        <input required ng-model="vm.user.userAt"></input>
+        <input  ng-model="vm.user.userAt"></input>
       </md-input-container>       
       <md-input-container >
         <label> Where You're Going </label>
-        <input required ng-model="vm.user.userGoing"></input>
+        <input  ng-model="vm.user.userGoing"></input>
       </md-input-container>
       <div layout="row" ng-repeat="a in vm.user.languages" style="padding-left:6px;">
         <md-input-container >
-        <label> Languages </label>
-        <input required ng-model="vm.user.languages[$index].lang"></input>
+        <label> Programming Languages </label>
+        <input  ng-model="vm.user.languages[$index].lang"></input>
       </md-input-container>
-           <label> Proficiency from 1 to 5 </label>
-        <input required ng-model="vm.user.languages[$index].level"></input>
+        <label> Proficiency from 1 to 5 </label>
+        <input  ng-model="vm.user.languages[$index].level"></input>
       </md-input-container>
               <md-button type="button" ng-click="vm.user.languages.splice($index, 1)">X</md-button>
         </div>
@@ -70,13 +70,8 @@
         </div>
 
           <div layout="row" style="padding-top:50px">
-          <md-button type="submit" class="md-raised"> Edit Profile </md-button>
+          <md-button type="submit" class="md-raised"> Create Profile </md-button>
           <md-button type="button" class="md-raised" ui-sref="Profile"> Cancel</md-button>
         </div>
     </div>
   </form>
-
-
-
-
-</div>
