--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -13,6 +13,8 @@
       </md-input-container>
       <div style="text-align:center">
         <md-button type="submit" class="md-raised">Login</md-button>
+        <md-button href="api/users/auth/linkedin" style="text-shadow:none;" class="md-fab md-button"><i class="fa fa-facebook" style="font-size: 1.7em;"></i></md-button>
+        <a href="api/users/auth/linkedin">Login with LinkedIn</a>
         <md-button type="button" class="md-raised" ng-click="nav.isLogin = false;" class="btn btn-primary">Register</md-button>
       </div>
     </form>
