CRUD on forum post completed

--- a/public/views/createProfile.html
+++ b/public/views/createProfile.html
@@ -5,7 +5,7 @@
     <div>
      <md-input-container >
         <label> Upload a Photo</label>
-        <input required ng-model="vm.user.pic"></input> 
+        <input required ng-model="vm.user.pic"></input>
         <!-- dont know what type of input field we need for this -->
       </md-input-container>
       <md-input-container >
@@ -22,10 +22,10 @@
       </md-input-container>
       <md-input-container>
         <label> Password</label>
-        <input required ng-model="vm.user.password"></input> 
+        <input required ng-model="vm.user.password"></input>
         <!-- need to figure out how to reset password -->
       </md-input-container>
- 		<md-input-container >		
+ 		<md-input-container >
         <label> Location </label>
         <input required ng-model="vm.user.location"></input>
       </md-input-container>
@@ -46,11 +46,11 @@
        <md-input-container >
         <label> Where You've Been  </label>
         <input  ng-model="vm.user.userBeen"></input>
-      </md-input-container>       
+      </md-input-container>
       <md-input-container >
         <label> Where You're At  </label>
         <input  ng-model="vm.user.userAt"></input>
-      </md-input-container>       
+      </md-input-container>
       <md-input-container >
         <label> Where You're Going </label>
         <input  ng-model="vm.user.userGoing"></input>
@@ -75,3 +75,6 @@
         </div>
     </div>
   </form>
+
+  <!-- ADDED CLOSING DIV tags -->
+</div>
