--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -17,7 +17,7 @@
       </div>
     </form>
     <center>
-     <md-button type="button" class="md-warn" style="text-align:center" ng-click='vm.ResetPassword()' class="btn btn-primary">Forgot Password</md-button>
+     <md-button type="button" class="md-warn" style="text-align:center" ui-sref='PassReset' class="btn btn-primary">Forgot Password</md-button>
    </center>
   </div>
 
