--- a/views/index.html
+++ b/views/index.html
@@ -35,6 +35,7 @@
 	<script src="/angular-material/angular-material.min.js"></script>
 	<script src="/angular-aria/angular-aria.min.js"></script>
 	<script src="/angular-animate/angular-animate.min.js"></script>
+	<script src="/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<!-- Global Src -->
 	<script src="/javascript/app.js"></script>
 	<!-- Factories -->
