--- a/public/views/createforumPost.html
+++ b/public/views/createforumPost.html
@@ -20,9 +20,10 @@
             </md-select>
           </md-input-container>
             <div layout="row" style="padding-top:50px">
-            <md-button type="submit" class="md-raised"> Create</md-button>
-            <md-button type="button" class="md-raised" ui-sref="Home"> Cancel</md-button>
+            <md-button type="submit" class="md-raised md-primary">Create</md-button>
+            <md-button type="button" class="md-raised md-warn" ui-sref="Home">Cancel</md-button>
           </div>
+          <md-button>Test</md-button>
       </div>
     </form>
 
