--- a/views/index.html
+++ b/views/index.html
@@ -51,6 +51,7 @@
 	<script src="/javascript/controllers/GlobalController.js"></script>
 	<script src="/javascript/controllers/ForumController.js"></script>
 	<script src="/javascript/controllers/ProfileController.js"></script>
+	<script src="/javascript/controllers/ProfilePostController.js"></script>
 
 
 </body>
