--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,9 +1,56 @@
 <div ng-controller="ProfileController as vm">
 
-<h1> This is the profile </h1>
+<h1> Profile </h1>
 
 <p> Hi {{vm.profile.name}} {{vm.profile.lastName}}</p>
-
 <md-button class="md-raised" ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
+</div>
+
+<div ng-controller="ProfilePostController as vm">
+  <div layout="row" layout-align="center center" ng-show ='nav.status.name;'>
+    <div flex="50">
+      <form ng-submit="vm.createPost();">
+        <md-input-container layout-padding>
+          <label>Title</label>
+          <input required ng-model="vm.post.title" />
+        </md-input-container>
+        <md-input-container layout-padding>
+          <label> Content </label>
+          <input required ng-model="vm.post.body" />
+        </md-input-container>
+        <br>
+        <br>
+        <md-button type="submit" class="md-raised" > Post the Post </md-button>
+</form>
+</div>
+</div>
+
+<md-content>
+  <md-list>
+    <md-list-item ng-repeat='p in vm.posts'>
+      <div class='md-list-item-text' style='padding:10px; padding-left:30px'>
+        <h5> Title: {{p.title}}</h5>
+        <h5> Content: {{p.body}}</h5>
+        <h5> Created By: {{p.createdBy}}</h5>
+        <h5> Created On: {{p.date}}</h5>
+        <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click='showEdit = true'> Edit </md-button>
+        <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click="vm.deletePost(p._id)"> Delete </md-button>
+      <form ng-show = 'showEdit' style="padding:30px; padding-top:100px" style='text-align:center' ng-submit='vm.editPost(p._id, editingPost); showEdit = false;'>
+                <md-input-container>
+                  <label> Title </label>
+                  <input type='text' ng-model='vm.editingPost.title'>
+                </md-input-container>
+                <md-input-container>
+                  <label> Content </label>
+                  <input type='text' ng-model='vm.editingPost.body'>
+                </md-input-container>
+                <md-button type='submit' class='md-raised' > Edit </md-button>
+                <md-button type='button' class='md-raised' ng-click = "showEdit = false;"> Cancel </md-button>
+      </form>
+    </md-list-item>
+  </md-list>
+    </div>
+</md-content>
+
 
 </div>
