--- a/views/index.html
+++ b/views/index.html
@@ -2,24 +2,26 @@
 <html ng-app="app">
 
 <head>
-	<title> DevNet </title>
+	<title> Coder Nets </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/angular-material/angular-material.css">
+<link href='https://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
+	<!-- <link rel="stylesheet" href="css/demo.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
+	<!-- <link rel="stylesheet" href="css/footer-distributed.css"> -->
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
 
 <body ng-controller='GlobalController as nav'>
 
-	<md-toolbar style=" background-color: #448aff" layout="row">
+	<md-toolbar style=" background-color:#32B2B2" layout>
 
-		<section layout="row" flex="35" layout-align="left" layout-wrap>
-			<div ui-sref="Home">
-				<h1 style="padding-left: 17px"> Dev Net </h1>
-			</div>
+		<section layout flex layout-align="left" style="padding-left:20px">
+				<h1 class="logo" style="padding-left: 17px" ui-sref="Home"> &#060;&nbsp;Coder Net&nbsp;&#062; </h1>
 		</section>
 
 
-		<section layout layout-align="right" layout-wrap style="padding : 15px">
+		<section layout layout-align="end end" >
 			<md-button ui-sref="Profile({id: nav.status._id})" ng-show='nav.status.email;'> Welcome {{nav.status.name}} </md-button>
 			<md-button type='button' ng-click='nav.logout()' ng-show='nav.status.email;'> Logout </md-button>
 			<md-button type='button' ui-sref='RegLog' ng-show='!nav.status.email;'> Login/Register </md-button>
@@ -28,6 +30,38 @@
 	</md-toolbar>
 
 	<ui-view></ui-view>
+
+	<footer class="footer-distributed" style=" background-color:#32B2B2">
+
+		<div class="footer-right">
+			<p> Follow Us </p>
+			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
+			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
+			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
+			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-github"></i></a>
+
+		</div>
+
+		<div class="footer-left">
+	<h3 class="logo" > &#060;&nbsp;Coder Net&nbsp;&#062; </h3>
+
+			<p class="footer-links">
+				<a ui-sref="Home">Home</a>
+				|
+				<a ui-sref="Forum">Forum</a>
+				|
+				<a ui-sref="About">About</a>
+				|
+				<a ui-sref="Contact">Contact</a>
+				|
+				<a ui-sref="Terms">Term of Service</a>
+			</p>
+
+			<p>Coder Net &copy; 2015</p>
+		</div>
+
+	</footer>
+
 	<!-- Ext Libs -->
 	<script src="angular/angular.min.js"></script>
 	<script src="angular-ui-router/release/angular-ui-router.min.js"></script>
