--- a/public/css/footer-distributed.css
+++ b/public/css/footer-distributed.css
@@ -1,6 +1,7 @@
-.logo {
-  font-family: 'Quicksand', sans-serif;
-  color: #ffffff;
+
+footer{
+	position: fixed;
+	bottom: 0;
 }
 
 .footer-distributed{
