pushing updates to comments on fpost

--- a/public/views/forumPost.html
+++ b/public/views/forumPost.html
@@ -21,7 +21,7 @@
 <md-button ng-click='vm.postComments()'>Post Comment</md-button>
 </md-input-container>
 
-<div ng-repeat="c in vm.comment">
+<div ng-repeat="c in vm.comments">
   <h4>{{c.body}}</h4>
 </div>
   <h1>test</h1>
