--- a/views/index.html
+++ b/views/index.html
@@ -29,8 +29,8 @@
 
 	</md-toolbar>
 	<script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
-	<input type="filepicker" data-fp-apikey="ANDYMo7mqQjawgErCA0F0z"
-onchange="alert(event.fpfile.url)">
+	<!-- <input type="filepicker" data-fp-apikey="ANDYMo7mqQjawgErCA0F0z"
+onchange="alert(event.fpfile.url)"> -->
 	<ui-view></ui-view>
 
 	<footer class="footer-distributed" style=" background-color:#32B2B2">
