--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,11 +26,11 @@
 <h5 style="text-align: center"> News Feed </h5>
 <md-content>
   <md-list>
-    <md-list-item ng-repeat="p in vm.allPosts | orderBy:'date'">
+    <md-list-item ng-repeat='p in vm.allPosts'>
       <div class='md-list-item-text' style='padding:10px; padding-left:30px'>
         <h5> Title: {{p.title}}</h5>
         <h5> Content: {{p.body}}</h5>
-        <h5> Created By: {{nav.status.name}}</h5>
+        <h5> Created By: {{p.name}}</h5>
         <h5> Created On: {{p.date}}</h5>
         <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
     </md-list-item>
