Ghazali: changed the routes - linked everything to User model

--- a/public/views/forum.html
+++ b/public/views/forum.html
@@ -18,7 +18,7 @@
 <!-- <div ng-show="sometopic"> -->
 <a ui-sref="ForumPost({id: f._id})"> <h4>{{f.title}}</h4></a><br>
 <!-- <div layout-fill><h3>{{f}}</h3></div> -->
-<h5>Posted by {{f.createdBy}}</a></h5>
+<h5>Posted by {{f.createdBy.name}} {{f.createdBy.lastName}}</a></h5>
 </div>
 </div>
 </div>
