--- a/public/views/passwordReset.html
+++ b/public/views/passwordReset.html
@@ -1,21 +1,19 @@
-<div ng-controller='PassResetController as vm'>
+<!-- <div ng-controller='PassResetController as vm'> -->
 
-<div>
-  <form ng-submit='vm.sendEmail()'>
-    <md-input-container class='col-md-12'>
-      <label style="text-align:center">Enter Your Email</label>
-      <input type='email' ng-model='vm.email'>
-    </md-input-container>
-  </form><br>
-  <center>
-    <md-button class='md-raised md-primary' ng-click='vm.sendEmail()'>Send Email</md-button>
-  </center>
-</div>
-  <h1>{{vm.errorMessage}}</h1>
-<center>
-  <div ng-show='vm.loading' layout='row' layout-sm='column' layout-align='space-around'>
-    <md-progress-circular md-mode='indeterminate' md-diameter='80'></md-progress-circular>
-  </div>
-</center>
+<form ng-submit="nav.resetPassword()">
 
-</div>
+Please Choose your new password here
+	<div class="form-group">
+		<label>Password</label>
+		<input type="text" placeholder="Password..." required ng-model="nav.user.password" />
+	</div>
+
+	<div class="form-group">
+		<label>Confirm Email</label>
+		<input type="text" placeholder="Confirm Password..." required ng-model="nav.user.confirmPass" />
+	</div>
+
+	<div class="form-group">
+		<button type="submit" ng-disabled="!nav.user.password || !nav.user.confirmPass">Submit</button>
+	</div>
+</form>
