--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -13,7 +13,7 @@
       </md-input-container>
       <div style="text-align:center">
         <md-button type="submit" class="md-raised">Login</md-button>
-        <a href="api/users/auth/linkedin">
+        <a href="api/auth/linkedin">
           <img class="linkedlogin" src="/imgs/login/small_default.png" onmouseover="this.src='/imgs/login/small_hover.png'" onmouseout="this.src='/imgs/login/small_default.png'"
           onclick="this.src='/imgs/login/small_active.png'"/>
         </a>
@@ -23,7 +23,7 @@
     <center>
      <md-button type="button" class="md-warn" style="text-align:center" ui-sref='PassReset' class="btn btn-primary">Forgot Password</md-button>
    </center>
-      <md-button type="button" class="md-warn" style="text-align:center" ng-click='vm.ResetPassword()' class="btn btn-primary">Forgot Password</md-button>
+      <md-button type="button" class="md-warn" style="text-align:center" ng-click="nav.forgot();" class="btn btn-primary">Forgot Password</md-button>
     </center>
   </div>
 
