--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -2,24 +2,24 @@
   <!-- <script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script> -->
 
 
-  <h5 style="text-align: center"> Profile </h5>
-
-<!-- <p> {{vm.profile.name}} {{vm.profile.lastName}}</p> -->
-<div style="height:250px;width:225px; background-color:tan;margin-left:15px;text-align:center;"><h3>Your Photo</h3><img style='max-width:100%; max-height:100%' src='{{vm.profile.pic}}'></div>
+  <h5 style="text-align: center"> Profile</h5>
+<div>
+<div style="height:225px;width:225px; background-color:#ffdb58; margin-left:50px;text-align:center;"><img style='max-width:100%; max-height:100%' src='{{vm.profile.pic}}'></div>
 <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
-</div>
 
 <!-- <input type="filepicker" data-fp-apikey="ANDYMo7mqQjawgErCA0F0z"
 onchange="alert(event.fpfile.url)"> -->
-<div ng-controller="ProfilePostController as vm">
-  <div layout="row" layout-align="center center" ng-show ='nav.status.name;'>
+
+<!-- <div ng-controller="ProfilePostController as vm"> -->
+<content>
+  <div layout layout-align="center" ng-show ='nav.status.name;'>
     <div flex="50">
       <form style="margin-top:50px;"ng-submit="vm.createPost();">
-        <md-input-container layout-padding>
+        <md-input-container>
           <label>Title</label>
-          <input required ng-model="vm.post.title" />
+          <input required ng-model="vm.post.title"/>
         </md-input-container>
-        <md-input-container layout-padding>
+        <md-input-container >
           <label> Content </label>
           <input required ng-model="vm.post.body" />
         </md-input-container>
@@ -29,15 +29,15 @@ onchange="alert(event.fpfile.url)"> -->
 </form>
 </div>
 </div>
+</content>
 
 <md-content >
   <md-list>
-    <md-list-item ng-repeat='p in vm.posts'>
+    <md-list-item ng-repeat='p in vm.profile.profilePosts'>
       <div class='md-list-item-text' layout-align="center center" style='text-align:center;padding:10px; padding-left:30px;margin-left:150px;margin-top:30px;'>
         <h5> Title: {{p.title}}</h5>
         <h5> Content: {{p.body}}</h5>
         <h5> Created By: {{p.createdBy.name}}</h5>
-
         <h5> Created On: {{p.date}}</h5>
         <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click='showEdit = true'> Edit </md-button>
         <md-button type="button" class="md-raised" ng-hide='showEdit' ng-click="vm.deletePost(p._id)"> Delete </md-button>
@@ -53,10 +53,9 @@ onchange="alert(event.fpfile.url)"> -->
                 <md-button type='submit' class='md-raised' > Edit </md-button>
                 <md-button type='button' class='md-raised' ng-click = "showEdit = false;"> Cancel </md-button>
       </form>
+        </div>
     </md-list-item>
   </md-list>
-    </div>
 </md-content>
-
-
+</div>
 </div>
