--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,7 @@
 
 <body ng-controller='GlobalController as nav'>
 
-	<md-toolbar style=" background-color:#32B2B2" layout>
-
+	<md-toolbar style=" background-color:#32B2B2;" layout>
 		<section layout flex layout-align="left" style="padding-left:20px">
 				<h1 class="logo" style="padding-left: 17px" ui-sref="Home"> &#060;&nbsp;Coder Net&nbsp;&#062; </h1>
 		</section>
@@ -61,7 +60,6 @@ onchange="alert(event.fpfile.url)"> -->
 
 			<p>Coder Net &copy; 2015</p>
 		</div>
-
 	</footer>
 
 
