added social buttons and resized them

--- a/public/views/test.html
+++ b/public/views/test.html
@@ -24,7 +24,7 @@ Share on
   <i class="fa fa-twitter"></i>
   </a>
 
-<a href="#" id="google+" class="social-btn"
+<a href="#" id="google" class="social-btn"
   socialshare
   socialshare-provider="google+"
   socialshare-text="720kb angular-socialshare"
