--- a/public/css/site.css
+++ b/public/css/site.css
@@ -84,15 +84,15 @@
 /*Round buttons for sharing content to linkedin, twitter, fb and google+*/
 .social-btn{
     display:inline-block;
-    width:50px;
-    height:50px;
-    line-height:50px;
+    width:30px;
+    height:30px;
+    line-height:30px;
     border: 2px solid #f5f5f5;
     border-radius: 50%;
     color:#f5f5f5;
     text-align:center;
     text-decoration:none;
-    background-color: white;
+    /*background-color: white;*/
     box-shadow: 0 0 3px gray;
     font-size: 1em;
     overflow:hidden;
@@ -101,4 +101,36 @@
 
 .social-btn:hover {
     background: #262626;
+}
+
+#linkedin{
+  background-color: #4875B4;
+}
+
+#facebook{
+  background-color: #3B5998;
+}
+
+#twitter{
+  background-color: #33CCFF;
+}
+
+#google{
+  background-color: #C63D2D;
+}
+
+#linkedin:hover{
+  background-color: #395d90;
+}
+
+#facebook:hover{
+  background-color: #2d4373;
+}
+
+#twitter:hover{
+  background-color: #33aaff;
+}
+
+#google:hover{
+  background-color: #b13728;
 }
