--- a/public/views/home.html
+++ b/public/views/home.html
@@ -32,10 +32,40 @@
         <h5> Content: {{p.body}}</h5>
         <h5> Created By: {{p.createdBy.name}}</h5>
         <h5> Created On: {{p.date}}</h5>
-        <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
+        <div class="share">
+          <a href="#" id="linkedin" class="social-btn"
+            socialshare
+            socialshare-provider="linkedin"
+            socialshare-text="{{p.title}}"
+            socialshare-url="http://localhost:3000">
+            <i class="fa fa-linkedin"></i>
+            </a>
+          <a href="#" id="facebook" class="social-btn"
+            socialshare
+            socialshare-provider="facebook"
+            socialshare-text="{{p.title}}"
+            socialshare-url="http://localhost:3000">
+            <i class="fa fa-facebook"></i>
+            </a>
+          <a href="#" id="twitter" class="social-btn"
+            socialshare
+            socialshare-provider="twitter"
+            socialshare-text="{{p.title}}"
+            socialshare-url="http://localhost:3000">
+            <i class="fa fa-twitter"></i>
+            </a>
+
+          <a href="#" id="google" class="social-btn"
+            socialshare
+            socialshare-provider="google+"
+            socialshare-text="{{p.title}}"
+            socialshare-url="http://localhost:3000">
+            <i class="fa fa-google-plus"></i>
+            </a>
+          </div>
+        <md-divider ng-if="!$last"></md-divider>
     </md-list-item>
   </md-list>
-    </div>
 </md-content>
 
 </div>
