Pearl: fixed linkedin bug. users now their names and profiles available

--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -23,11 +23,11 @@
       <br>
       <br>
     <center>
-      <a href="api/auth/linkedin" style="text-align:center">
+      <a href="api/auth/linkedin" ng-click="nav.linkLogin()" style="text-align:center">
         <img class="linkedlogin" src="/imgs/login/small_default.png" onmouseover="this.src='/imgs/login/small_hover.png'" onmouseout="this.src='/imgs/login/small_default.png'"
         onclick="this.src='/imgs/login/small_active.png'"/>
       </a>
-  </center>
+    </center>
   </div>
 
   <!-- Show the Register Form -->
