--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@ onchange="alert(event.fpfile.url)"> -->
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
-			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-github"></i></a>
+			<a class="list-group-item" href="https://github.com/devnetcc/DevNet" target="_blank"><i class="zmdi zmdi-github"></i></a>
 
 		</div>
 
