ghazal: facebbok Oauth works - working on sending token back

--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -28,6 +28,13 @@
         onclick="this.src='/imgs/login/small_active.png'"/>
       </a>
   </center>
+  <br>
+  <br>
+  <center>
+  <a href="/api/auth/facebook" style="text-align:center">
+Facebook
+</a>
+</center>
   </div>
 
   <!-- Show the Register Form -->
@@ -62,6 +69,18 @@
         onclick="this.src='/imgs/login/small_active.png'"/>
       </a>
   </center>
+  <br>
+  <br>
+  <center>
+  <a href="/api/auth/facebook" style="text-align:center" class="btn btn-block">
+Facebook
+</a>
+</center>
+
+
+
+  <!-- <div class="fb-login-button" data-max-rows="2" data-size="large" data-show-faces="false" data-auto-logout-link="false"></div> -->
+
   </div>
 
 </div>
